Fixed some alignment issues.

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 55px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     position: fixed;
 
     .logo {
@@ -51,6 +51,7 @@
         display: flex;
         flex-flow: row nowrap;
         margin: 0;
+        padding: 0;
         transition: transform 0.3s ease-in-out;
     
         li {
